# wolfcode-zed

./: Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/audio_pipeline/: echo_canceller.rs
crates/call/src/call_impl/: diagnostics.rs
crates/editor/src/: actions.rs  clipboard.rs  editor.rs
crates/lesson_panel/: Cargo.toml
crates/lesson_panel/src/: lesson_panel.rs
crates/lesson_runner/: Cargo.toml
crates/lesson_runner/src/: lesson_runner.rs
crates/lesson_telemetry/: Cargo.toml
crates/lesson_telemetry/src/: lesson_telemetry.rs
crates/lesson_tutor/: Cargo.toml
crates/lesson_tutor/src/: lesson_tutor.rs
crates/livekit_client/: Cargo.toml
crates/livekit_client/src/: lib.rs
crates/onboarding/src/: onboarding.rs
crates/wolfcode_auth/: Cargo.toml
crates/wolfcode_auth/src/: wolfcode_auth.rs
crates/workspace/src/: welcome.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
script/update_top_ranking_issues/: pyproject.toml
