[package]
name = "lesson_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lesson_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
language.workspace = true
log.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
theme.workspace = true
ui.workspace = true
workspace.workspace = true
credentials_provider.workspace = true
zed_credentials_provider.workspace = true
# Z-W13: button dispatchers re-use action types declared in these crates.
lesson_runner = { path = "../lesson_runner" }
lesson_tutor = { path = "../lesson_tutor" }
