[package]
name = "lesson_runner"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lesson_runner.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
editor.workspace = true
gpui.workspace = true
log.workspace = true
project.workspace = true
task.workspace = true
terminal_view.workspace = true
workspace.workspace = true
