[package]
name = "lesson_tutor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lesson_tutor.rs"
doctest = false

[dependencies]
anyhow.workspace = true
credentials_provider.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
zed_credentials_provider.workspace = true
