[package]
name = "wolfcode_auth"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/wolfcode_auth.rs"
doctest = false

[dependencies]
anyhow.workspace = true
credentials_provider.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
workspace.workspace = true
zed_credentials_provider.workspace = true
